Fixed height sizing on Firefox

--- a/nengo_viz/static/main.css
+++ b/nengo_viz/static/main.css
@@ -1,5 +1,7 @@
 body {
     margin: 0px;
+    height: 100%;
+    width: 100%;
 }
 
 #main {
